infra/controllers/zigbee2mqtt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zigbee2mqtt
  labels:
    http-ingress: "true"
